# atlant_bot

./: .env.example  .gitignore  Dockerfile  atlant.service  pyproject.toml
atlant_bot/: bot.py  driver.py  gazovik.py  main.py  parser.py  settings.py
webreg/: main.py  parser.py  utils.py
